--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -6,6 +6,8 @@
 
 <body>
 
+<h1>GCC Regression Testing</h1>
+
 <p>Ben Elliston operates a Tinderbox-style
 <a href="http://people.redhat.com/bje/tinderbox.html">build and regression
 testing system</a>.</p>
