Provide general instructions on how to check out a release branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -107,13 +107,15 @@ or the generator files, it is safe to delete the offending file, then run
 
 <h3>CVS tags and checkouts</h3>
 
-<p> You can check out the latest version of the GCC 3.0 release
-branch with the following command:</p>
+<p> You can check out the latest version of the GCC <em>x</em>.<em>y</em>
+release branch with the following command:</p>
 
-<blockquote><p><code>cvs -z 9 co -rgcc-3_0-branch gcc</code></p></blockquote>
+<blockquote><p>
+<code>cvs -z 9 co -rgcc-<em>x</em>_<em>y</em>-branch gcc</code>
+</p></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
-particular releases or snapshots or the latest snapshot.  Other tags/branches
+particular releases or snapshots or the latest snapshot.  Tags/branches
 you may want to check out include:</p>
 
 <ul>
