Add information about test results in gcc-testresults, with pointer to how to submit such results.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -12,6 +12,12 @@
 <a href="http://people.redhat.com/bje/tinderbox.html">build and regression
 testing system</a>.</p>
 
+<p>Several people perform regular builds and regression test runs and
+send their test results to the <a href="http://gcc.gnu.org/ml/gcc-testresults">
+gcc-testresults mailing list</a>; see
+<a href="http://gcc.gnu.org/install/test.html"> Installing GCC: Testing</a>
+for information about submitting test results.</p>
+
 </body>
 
 </html>
