Mention Janis Johnson.

--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -11,8 +11,10 @@
 <p>These pages are maintained by the GCC team, which consists of
 numerous
 <a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">volunteers
-and contributors</a>.
-The web effort is coordinated by Jeff Law and Gerald Pfeifer, but again,
+and contributors</a>.</p>
+
+<p>The web effort was originally lead by Jeff Law and later Gerald Pfeifer.
+These days, Gerald and Janis Johnson maintain the web pages, but again,
 there are <em>lots</em> of people who contribute.</p>
 
 <p>The pages on gcc.gnu.org are updated "live" (that is, directly after
