Make absolute URL relative to fix mirror sites.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -776,7 +776,7 @@ Note that the operator <b>not</b> is binary, having the meaning of
 
 <hr />
 <a href="http://www.htdig.org">
-<img src="/htdig/htdig.jpeg" alt="ht://Dig" border="0" />ht://Dig</a>
+<img src="htdig/htdig.jpeg" alt="ht://Dig" border="0" />ht://Dig</a>
 search engine.
 
 </body>
