--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -507,8 +507,7 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="ftp://ftp.sgi.com/sgi/dev/davea/objectinfo.html">Debugging/object info</a> by David B.Anderson (including links to some DWARF tools)</li>
 
-  <li><a href="http://www.as400.ibm.com/beyondtech/translator.htm">AS/400 compiler optimizer information</a></li>
-
+  <li><a href="http://www-1.ibm.com/servers/eserver/iseries/whpapr/translator.html">AS/400 compiler optimizer information</a></li>
 </ul><ul>
 
   <li>EG3 maintains a list of compiler Internet resources, including FAQ's,
