Add 3.2 entry for powerpc-apple-darwin5.3.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -418,6 +418,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin5.3</td>
+<td>&nbsp;</td>
+<td>Successful (with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01649.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>powerpc-apple-darwin6.0</td>
 <td>&nbsp;</td>
 <td>Successful (with patch):
