Avoid <h2>s in the navigation; make the main heading an <h1>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,7 +13,7 @@
 
 <tr><td><table cellspacing="0" width="100%">
 <tr bgcolor="#FFEE99"><td>
-<h2>About</h2>
+<p>About GCC</p>
 </td></tr>
 <tr bgcolor="#FFFFBB"><td>
 <p>
@@ -29,7 +29,7 @@
 
 <tr><td><table cellspacing="0" width="100%">
 <tr bgcolor="#FFEE99"><td>
-<h2>Docs</h2>
+<p>Docs</p>
 </td></tr>
 <tr bgcolor="#FFFFBB"><td>
 <p>
@@ -45,7 +45,7 @@
 
 <tr><td><table cellspacing="0" width="100%">
 <tr bgcolor="#FFEE99"><td>
-<h2>Download</h2>
+<p>Download</p>
 </td></tr>
 <tr bgcolor="#FFFFBB"><td>
 <p>
@@ -60,7 +60,7 @@
 
 <tr><td><table cellspacing="0" width="100%">
 <tr bgcolor="#FFEE99"><td>
-<h2>Development</h2>
+<p>Development</p>
 </td></tr>
 <tr bgcolor="#FFFFBB"><td>
 <p>
@@ -81,7 +81,7 @@
 
 <tr><td><table cellspacing="0" width="100%">
 <tr bgcolor="#FFEE99"><td>
-<h2>Bugs</h2>
+<p>Bugs</p>
 </td></tr>
 <tr bgcolor="#FFFFBB"><td>
 <p>
@@ -110,7 +110,7 @@
 
 <img src="gcc.jpg" alt="" align="right" />
 
-<h2>Welcome to the GCC home page!</h2>
+<h1><small>Welcome to the GCC home page!</small></h1>
 
 <p>In April 1999, the egcs steering committee was appointed by the FSF
 as the official GNU maintainer for GCC.  At that time GCC was renamed
