--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,110 +3,8 @@
 <title>GCC Home Page</title>
 </head>
 
+<set-var navigation>
 <body>
-
-<table border="0" cellspacing="0" cellpadding="2">
-<tr>
-
-<td valign="top">                                         <!-- left frame -->
-<table border="0" cellspacing="0" cellpadding="2" width="1%">
-
-<tr><td><table cellspacing="0" width="100%">
-<tr bgcolor="#FFEE99"><td>
-<b>About GCC</b>
-</td></tr>
-<tr bgcolor="#FFFFBB"><td>
-<p>
-<a href="gccmission.html">Mission Statement</a><br />
-<a href="lists.html">Mailing lists</a><br />
-<a href="releases.html#timeline">Timeline</a><br />
-<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">Contributors</a><br />
-<a href="steering.html">Steering Committee</a><br />
-</p>
-</td></tr>
-</table></td></tr>
-
-
-<tr><td><table cellspacing="0" width="100%">
-<tr bgcolor="#FFEE99"><td>
-<b>Docs</b>
-</td></tr>
-<tr bgcolor="#FFFFBB"><td>
-<p>
-<a href="faq.html">FAQ</a><br />
-<a href="http://gcc.gnu.org/install/">Installation</a><br />
-<a href="http://gcc.gnu.org/install/specific.html">Supported Platforms</a><br />
-<a href="onlinedocs/">Manual</a><br />
-<a href="readings.html">Further Readings</a>
-</p>
-</td></tr>
-</table></td></tr>
-
-
-<tr><td><table cellspacing="0" width="100%">
-<tr bgcolor="#FFEE99"><td>
-<b>Download</b>
-</td></tr>
-<tr bgcolor="#FFFFBB"><td>
-<p>
-<a href="releases.html">Releases</a><br />
-<a href="snapshots.html">Snapshots</a><br />
-<a href="mirrors.html">Mirror sites</a><br />
-<a href="http://gcc.gnu.org/install/binaries.html">Binaries</a>
-</p>
-</td></tr>
-</table></td></tr>
-
-
-<tr><td><table cellspacing="0" width="100%">
-<tr bgcolor="#FFEE99"><td>
-<b>Development</b>
-</td></tr>
-<tr bgcolor="#FFFFBB"><td>
-<p>
-<a href="develop.html">Development Plan</a><br />
-<a href="contribute.html">Contributing</a><br />
-<a href="contributewhy.html">...Why?</a><br />
-<a href="projects/">Open projects</a><br />
-<a href="frontends.html">Front ends</a><br />
-<a href="extensions.html">Extensions</a><br />
-<a href="cvs.html">CVS read access</a><br />
-<a href="rsync.html">Rsync read access</a><br />
-<a href="cvsup.html">CVSup mirrors</a><br />
-<a href="cvswrite.html">CVS write access</a><br />
-</p>
-</td></tr>
-</table></td></tr>
-
-
-<tr><td><table cellspacing="0" width="100%">
-<tr bgcolor="#FFEE99"><td>
-<b>Bugs</b>
-</td></tr>
-<tr bgcolor="#FFFFBB"><td>
-<p>
-<a href="bugs.html">Report a bug</a><br />
-<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">Bug database</a><br />
-<a href="gnatswrite.html">...write access</a><br />
-<a href="bugs.html#known">Known bugs</a>
-</p>
-<hr />
-<form method="get" action="http://gcc.gnu.org/cgi-bin/ml-request">
-  <p><small>Get our announcements:<br />
-  <input type="hidden" name="digest"    value="off" />
-  <input type="hidden" name="operation" value="subscribe" />
-  <input type="hidden" name="listname"  value="gcc-announce" />
-  <input type="text"   name="username"  value="your e-mail address" size="20" />
-  <input type="submit" name="submit"    value="Subscribe!" />
-  </small></p>
-</form>
-</td></tr>
-</table></td></tr>
-
-</table>
-</td>                                              <!-- end of left frame -->
-
-<td bgcolor="white" valign="top" width="99%">            <!-- right frame -->
 
 <img src="gcc.jpg" alt="" align="right" />
 
@@ -247,11 +145,6 @@ from the GCC source tree.
 <a href="news.html">Older news and announcements...</a>
 <br />
 <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran news</a>
-
-</td>                                             <!-- end of right frame -->
-
-</tr>
-</table>
 
 <include searchbox.ihtml>
 
