Use &gt; instead of >.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -299,7 +299,7 @@ changed:</p>
 </pre>
 </li>
 
-<li>Verify all the object->header dependencies in the Makefiles.
+<li>Verify all the object-&gt;header dependencies in the Makefiles.
 
 <p>Mega bonus points for working out a way to do automatic dependency
 generation <em>without</em> relying on features of GCC or GNU
