--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -34,9 +34,9 @@ library.</p>
 
 <h2>Greater Coordination with the Front Ends</h2>
 
-The integrated preprocessor would benefit from greater integration
+<p>The integrated preprocessor would benefit from greater integration
 with the front ends.  It still feels like it has been tacked on as an
-after thought, which is not entirely coincidental.
+after thought, which is not entirely coincidental.</p>
 
 <ol>
   <li>Character sets that are strict supersets of ASCII are safe to
@@ -69,8 +69,8 @@ after thought, which is not entirely coincidental.
       it should use cpplib's token codes.</li>
 
   <li>String concatenation should be handled in the function
-      <code>c_lex</code> in <tt>c-lex.c</tt>.  Then the front ends would
-      not have to jump through hoops to remember to concatenate
+      <code>c_lex</code> in <code>c-lex.c</code>.  Then the front ends
+      would not have to jump through hoops to remember to concatenate
       strings, and we could simplify the parsers a little too.</li>
 </ol>
 
