--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -110,28 +110,35 @@ it isn't very useful.</dd>
 </table>
 
 <dl>
-<dt class="target">GNU/Linux on the Pentium-compatible PCs</dt>
+<dt class="target">GNU/Linux on the Pentium-compatible PCs
+  (<code>x[56]86-pc-linux-gnu</code>)</dt>
 <dd>Ok.</dd>
-<dt class="target">FreeBSD on the Pentium-compatible PCs</dt>
+<dt class="target">FreeBSD on the Pentium-compatible PCs
+  (<code>i[56]86-pc-freebsd*</code>)</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on Alpha</dt>
 <dd>Ok.</dd>
-<dt class="target">GNU/Linux on the Itanium (ia64) architecture</dt>
+<dt class="target">GNU/Linux on the Itanium (ia64) architecture
+  (<code>ia64-*-linux-gnu</code>)</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on PowerPC</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on AMD x86-64 ("Hammer") architecture </dt>
 <dd>Ok, in CVS (but building with multilibs enabled needs libtool patch).</dd>
-<dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC</dt>
+<dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC
+  (<code>sparc-sun=solaris2.[5678]</code>)</dt>
 <dd>Ok for 32- and 64-bit ABIs.  Byte-code interpreter not currently
 supported.</dd>
-<dt class="target">SGI Irix 6.5 on Mips</dt>
+<dt class="target">SGI Irix 6.5 on Mips
+  (<code>mips-sgi-irix6.5</code>)</dt>
 <dd>Works, but some tricks needed.</dd>
-<dt class="target">Windows on the Intel PC platform, using the MingW32 compiler</dt>
+<dt class="target">Windows on the Intel PC platform, using the MingW32 compiler
+  (<code>x[56]86-pc-mingw32</code>)</dt>
 <dd>Works for target; works for host (in CVS).  Is incomplete.</dd>
 <dt class="target">PPC Darwin (including MacOS X)</dt>
 <dd>Some kludges needed.</dd>
-<dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpha</dt>
+<dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpha
+  (<code>alpha-dec-osf4.0f</code>, <code>alpha-dec-osf5.1</code>)</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on XScale using ELF</dt>
 <dd>Ok.</dd>
