--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -111,7 +111,7 @@ it isn't very useful.</dd>
 
 <dl>
 <dt class="target">GNU/Linux on the Pentium-compatible PCs
-  (<code>x[56]86-pc-linux-gnu</code>)</dt>
+  (<code>i[56]86-pc-linux-gnu</code>)</dt>
 <dd>Ok.</dd>
 <dt class="target">FreeBSD on the Pentium-compatible PCs
   (<code>i[56]86-pc-freebsd*</code>)</dt>
@@ -133,7 +133,7 @@ supported.</dd>
   (<code>mips-sgi-irix6.5</code>)</dt>
 <dd>Works, but some tricks needed.</dd>
 <dt class="target">Windows on the Intel PC platform, using the MingW32 compiler
-  (<code>x[56]86-pc-mingw32</code>)</dt>
+  (<code>i[56]86-pc-mingw32</code>)</dt>
 <dd>Works for target; works for host (in CVS).  Is incomplete.</dd>
 <dt class="target">PPC Darwin (including MacOS X)</dt>
 <dd>Some kludges needed.</dd>
