--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -126,7 +126,7 @@ it isn't very useful.</dd>
 <dt class="target">GNU/Linux on AMD x86-64 ("Hammer") architecture </dt>
 <dd>Ok, in CVS (but building with multilibs enabled needs libtool patch).</dd>
 <dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC
-  (<code>sparc-sun=solaris2.[5678]</code>)</dt>
+  (<code>sparc-sun-solaris2.[5678]</code>)</dt>
 <dd>Ok for 32- and 64-bit ABIs.  Byte-code interpreter not currently
 supported.</dd>
 <dt class="target">SGI Irix 6.5 on Mips
