Move the general description of GCC to the first paragraph, and update the wording of the information about the steering committee and mission statement so they don't sound like news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,14 +10,16 @@
 
 <h1><small>Welcome to the GCC home page!</small></h1>
 
-<p>In April 1999, the egcs steering committee was appointed by the FSF
-as the official GNU maintainer for GCC.  At that time GCC was renamed
-from the "GNU C Compiler" to the "GNU Compiler Collection" and received
-a new <a href="gccmission.html">mission statement</a>.</p>
-
-<p>Currently GCC contains front ends for C, C++, Objective C, Fortran,
+<p>GCC is the GNU Compiler Collection, which currently contains
+front ends for C, C++, Objective C, Fortran,
 <a href="java/">Java</a>, and Ada, as well as libraries for these
 languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).</p>
+
+<p>Major decisions about GCC are made by the <a href="steering.html">
+steering committee</a>, guided by the <a href="gccmission.html">
+mission statement</a>.  That group began as the egcs steering
+committee and in April 1999 was appointed by the FSF as the official
+GNU maintainer for GCC.</p>
 
 <p>We encourage everyone to <a href="contribute.html">contribute changes</a>
 and help testing GCC, and we provide access to our development sources with
