--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -317,7 +317,7 @@ tahoe. These are listed here just for completeness.
 
  <li>z/Architecture (S/390)
   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
-  <br /><a href="http://www-1.ibm.com/servers/s390/os390/bkserv/latest/z_arch.html">z/Architecture Principles of Operation</a>
+  <br /><a href="http://www-1.ibm.com/servers/s390/os390/bkserv/latest/z_arch.html">z/Architecture Principles of Operation</a></li>
 
 </ul>
 
