* contrib.html: Do not use <GCJNAV> any longer. 	* docs.html: Ditto. 	* projects.html: Ditto. 	* faq.html: Ditto. 	* index.html: Ditto. 	* status.html: Ditto. 	* test.html: Ditto. 	* thanks.html: Ditto. 	* tm.html: Ditto (and add a <p> environment).
	* faq.html: Do not set bgcolor for the <body> and remove
	extraneous <br />s.
	* projects.html: Ditto.

	* compile.html: Use <h1> for the top-most heading.
	* faq-portugese.html: Ditto.  Also remove DOCTYPE and <meta> tags.

	* gcj-3.1-status.html: Update <title> and <h1>; avoid setting
	bgcolor for the <body>.

	* libgcj-platforms.html: Do not use align="center" for <h1>.

	* libgcj2.html: Remove a link back to the main page.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -3,12 +3,8 @@
 <title>The GCJ FAQ</title>
 </head>
 
-<body bgcolor="#FFFFFF">
+<body>
 
-<GCJNAV>
-
-<br />
-      <br />
       <h1>The GCJ FAQ</h1>
       <p>The latest version of this document is always available at <a href="faq.html">http://gcc.gnu.org/java/faq.html</a>.</p>
       <p>This FAQ is also available in <a href="faq-portugese.html">Brazilian Portugese</a>.</p>
@@ -656,9 +652,6 @@ $ ../configure [...]
           for more details on how to use the CNI interface. </p>
         </dd>
       </dl>
-
-
-</GCJNAV>
 
 </body>
 </html>
