--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">libgcj-2.95 Platform Test Strategy</h1>
+<h1>libgcj-2.95 Platform Test Strategy</h1>
 
 <h2> Platform Coverage </h2>
 <p>One of the critical steps in making releases is platform testing.  
