--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -2,11 +2,9 @@
 <head>
 <title>The GCJ Projects List</title>
 </head>
-<body bgcolor="#FFFFFF">
 
-<GCJNAV>
+<body>
 
-<br /><br />
 <h1>The GCJ Projects List</h1>
 
 <p>
@@ -205,8 +203,6 @@ Runtime improvements
 	    <li>Write a program to convert existing locale data into a
 	    format we can use.</li>
 	  </ul>
-
-</GCJNAV>
 
 </body>
 </html>
