--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -4,14 +4,10 @@
 </head>
 <body>
 
-<GCJNAV>
-
-Java and all Java-based marks are trademarks or registered trademarks
+<p>Java and all Java-based marks are trademarks or registered trademarks
 of Sun Microsystems, Inc. in the United States and other countries.
 The Free Software Foundation, Cygnus Solutions and Red Hat are
-independent of Sun Microsystems, Inc.
-
-</GCJNAV>
+independent of Sun Microsystems, Inc.</p>
 
 </body>
 </html>
