* status.html: Update target triples.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -115,7 +115,8 @@ it isn't very useful.</dd>
 <dt class="target">FreeBSD on the Pentium-compatible PCs
   (<code>i[56]86-pc-freebsd*</code>)</dt>
 <dd>Ok.</dd>
-<dt class="target">GNU/Linux on Alpha</dt>
+<dt class="target">GNU/Linux on Alpha
+  (<code>alpha*-*-linux-gnu</code>)</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on the Itanium (ia64) architecture
   (<code>ia64-*-linux-gnu</code>)</dt>
@@ -126,7 +127,7 @@ it isn't very useful.</dd>
 (<code>x86_64-*-linux-gnu</code>)</dt>
 <dd>Ok, in CVS (but building with multilibs enabled needs libtool patch).</dd>
 <dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC
-  (<code>sparc-sun-solaris2.[5678]</code>)</dt>
+  (<code>sparc*-sun-solaris2.[5678]</code>)</dt>
 <dd>Ok for 32- and 64-bit ABIs.  Byte-code interpreter not currently
 supported.</dd>
 <dt class="target">SGI Irix 6.5 on Mips
@@ -144,8 +145,9 @@ supported.</dd>
 <dd>Ok.</dd>
 <dt class="target">IBM s390x</dt>
 <dd>Ok, in CVS.</dd>
-<dt class="target">Hitachi SH-3/4 micro-controller</dt>
-<dd>Ok, in CVS (target only).</dd>
+<dt class="target">GNU/Linux on Hitachi SH-3/4 micro-controller
+  (<code>sh[34]-*-linux</code>)</dt>
+<dd>Ok, in CVS.</dd>
 </dl>
 
 </body>
