* status.html: Wrapped paragraph in <p>.  Mention some programs we 	provide. 	(java.nio, javax.naming, javax.transaction, java.text): Updated. 	Link to comparison pages.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -14,9 +14,9 @@ dt.target { font-weight: bold }
 
 <h1>GCJ Status</h1>
 
-Status of GCJ as of the current release (gcc 3.2).
+<p>Status of GCJ as of the current release (gcc 3.2).
 Improvements that are only in the CVS repository, but not
-in gcc 3.2 are marked as "in CVS".
+in gcc 3.2 are marked as "in CVS".</p>
 
 <table id="features" border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -39,6 +39,7 @@ and dynamically loaded classes. Corresponds to JDK's <code>java</code> command.<
 native) and run-time (loading classes).  Both miss some tests, and
 you should not (yet) rely on their correctness for security.</li>
 <li>A "conservative" garbage collector.</li>
+<li>A replacement for the jar, javah, rmic, and rmiregistry programs.</li>
 <li>An extensive class library - see below.</li>
 </ul>
 
@@ -71,7 +72,7 @@ it isn't very useful.</dd>
 <dt class="package">java.net</dt>
 <dd>Ok.</dd>
 <dt class="package">java.nio</dt>
-<dd>Ok.</dd>
+<dd>Some code; not working.</dd>
 <dt class="package">java.rmi</dt>
 <dd>Ok.</dd>
 <dt class="package">java.security</dt>
@@ -87,18 +88,28 @@ it isn't very useful.</dd>
 <dt class="package">java.util.zip</dt>
 <dd>Ok.</dd>
 <dt class="package">java.text</dt>
-<dd>Ok.</dd>
+<dd>Ok, but most localization data not available.</dd>
 <dt class="package">javax.accessibility</dt>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.naming</dt>
-<dd>Some code; status unknown.</dd>
+<dd>Complete, but no providers written.</dd>
 <dt class="package">javax.sql</dt>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.swing</dt>
 <dd>Some code, but not enough for real applications.</dd>
 <dt class="package">javax.transaction</dt>
-<dd>Some code; status unknown.</dd>
+<dd>Complete, but no providers written.</dd>
 </dl>
+
+<p>You can see <a
+href="http://gcc.gnu.org/java/libgcj-classpath-compare.html">a
+comparison of our classes with Classpath's</a>.  Differences here are
+merged from time to time.</p>
+
+<p>You can also see <a
+href="ftp://alpha.gnu.org/pub/gnu/classpath/nightly/tests/classpath-jdk13-compare.txt">a
+comparison of Classpath with the JDK</a>.  This is roughly equivalent
+to a comparison of libgcj with the JDK.</p>
 
 <table id="targets" border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
