* status.html: Use <code>.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -39,7 +39,8 @@ and dynamically loaded classes. Corresponds to JDK's <code>java</code> command.<
 native) and run-time (loading classes).  Both miss some tests, and
 you should not (yet) rely on their correctness for security.</li>
 <li>A "conservative" garbage collector.</li>
-<li>A replacement for the jar, javah, rmic, and rmiregistry programs.</li>
+<li>Replacements for the <code>jar</code>, <code>javah</code>,
+<code>rmic</code>, and <code>rmiregistry</code> programs.</li>
 <li>An extensive class library - see below.</li>
 </ul>
 
