--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -314,6 +314,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00060.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01000.html">3.2</a>
