Fix xscale reference.  Add arm.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -153,8 +153,12 @@ supported.</dd>
 <dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpha
   (<code>alpha-dec-osf4.0f</code>, <code>alpha-dec-osf5.1</code>)</dt>
 <dd>Ok.</dd>
-<dt class="target">GNU/Linux on XScale using ELF</dt>
-<dd>Ok.</dd>
+<dt class="target">Bare metal ARM ELF using newlib
+  (<code>arm-elf</code>)</dt>
+<dd>Ok, in CVS.  No threads, file I/O or networking.</dd>
+<dt class="target">Bare metal XScale ELF using newlib
+  (<code>xscale-elf</code>)</dt>
+<dd>Ok.  No threads, file I/O or networking.</dd>
 <dt class="target">IBM s390x</dt>
 <dd>Ok, in CVS.</dd>
 <dt class="target">GNU/Linux on Hitachi SH-3/4 micro-controller
