Fix a broken link pointed out in the gcc-bugs mailing list.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -363,7 +363,7 @@ tahoe. These are listed here just for completeness.
     <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n925.htm">
     A formal model of sequence points and related issues by
     Clive Feather</a></li>
-    <li><a href="http://www.cl.cam.ac.uk/users/mn200/PhD/thesis-report.ps.gz">
+    <li><a href="http://www.cl.cam.ac.uk/TechReports/UCAM-CL-TR-453.pdf">
     C formalised in HOL, thesis by Michael Norrish</a></li>
     <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n926.htm">
     Sequence points analysis by Raymond Mak</a></li>
