--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -61,7 +61,7 @@ and what does not.  If a developer is unsure, he or she should ask for
 guidance on the GCC mailing lists.  In general, a change that has the
 potential to be extremely destabilizing should be done on a branch.</p>
 
-<p>Changes may be merged from a branch only after:</p>
+<p>Changes may be merged from a development branch only after:</p>
 
 <ul>
 <li>They meet the standards for any other check-in.  For example, the
@@ -130,11 +130,11 @@ cycle, so that we have time to fix any problems that result.</p>
 fixing bugs; by working exclusively on bug-fixing through Stage 3, we
 will have a higher quality source base as we prepare for a release.</p>
 
-<p>Although maintaining a branch, including merging new changes from
-the mainline, is somewhat burdensome, the absolute worst case is that
-such a branch will have to be maintained for four months.  During two
-of those months, the only mainline changes will be bug-fixes, so it is
-unlikely that many conflicts will occur.</p>
+<p>Although maintaining a development branch, including merging new
+changes from the mainline, is somewhat burdensome, the absolute worst
+case is that such a branch will have to be maintained for four months.
+During two of those months, the only mainline changes will be bug-fixes,
+so it is unlikely that many conflicts will occur.</p>
 
 
 <h3>Patch Reversion</h3>
@@ -163,7 +163,7 @@ cause problems.  In addition, regressions on the mainline can impede
 the development of other improvements.</p>
 
 <p>On the other hand, we want to encourage new development, and new
-development inevitable introduces new bugs.  Therefore, it is
+development inevitably introduces new bugs.  Therefore, it is
 important that decisions be made on a case-by-case basis, and that the
 proponent of a change have an opportunity to argue that the benefits
 of the change outweigh the costs.  Therefore, the decision to revert
