* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 cvs Classpath.  It was generated using the <a
 href="scripts/gen-classpath-compare"><code>gen-classpath-compare</code></a>
 script on
-2002-11-03.
+2002-11-09.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,35 +19,26 @@ differences are currently required.</p>
 
 <table border=1 width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
-<tr> <td>gnu.java.rmi.dgc.DGCImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.dgc.DGCImpl.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.registry.RegistryImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.registry.RegistryImpl.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.registry.RegistryImpl_Stub</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.registry.RegistryImpl_Stub.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.RMIMarshalledObjectOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.RMIMarshalledObjectOutputStream.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.ConnectionRunnerPool</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.ConnectionRunnerPool.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.RMIObjectInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.RMIObjectInputStream.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.RMIObjectOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.RMIObjectOutputStream.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastConnection.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastConnectionManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastConnectionManager.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastRef</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastRef.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastRemoteCall</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastRemoteCall.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastServer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastServer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastServerRef</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.security.DefaultPermissionCollection</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.applet.AppletContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.applet.AppletContext.diff">Diff</a></td> </tr>
 <tr> <td>java.applet.Applet</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.applet.Applet.diff">Diff</a></td> </tr>
 <tr> <td>java.applet.AppletStub</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.applet.AppletStub.diff">Diff</a></td> </tr>
 <tr> <td>java.applet.AudioClip</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.applet.AudioClip.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.CardLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.CardLayout.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Choice</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Choice.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Container</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.color.ColorSpace</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.color.ColorSpace.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.color.ICC_ColorSpace</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.color.ICC_ColorSpace.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.color.ICC_ProfileGray</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.awt.color.ICC_Profile</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.color.ICC_Profile.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.color.ICC_ProfileRGB</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.ContainerOrderFocusTraversalPolicy</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.ContainerOrderFocusTraversalPolicy.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Cursor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Cursor.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.datatransfer.DataFlavor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.datatransfer.DataFlavor.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.DisplayMode</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.DisplayMode.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.dnd.DragSourceContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.dnd.DragSourceContext.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.dnd.DropTargetContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.dnd.DropTargetContext.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.dnd.DropTarget</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.dnd.DropTarget.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Event</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Event.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.event.KeyEvent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.event.KeyEvent.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.Frame</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Frame.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.GridBagConstraints</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridBagConstraints.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.GridBagLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridBagLayout.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.GridLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridLayout.diff">Diff</a></td> </tr>
@@ -64,6 +55,7 @@ differences are currently required.</p>
 <tr> <td>java.io.ObjectInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectStreamClass</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectStreamClass.diff">Diff</a></td> </tr>
+<tr> <td>java.io.ObjectStreamConstants</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectStreamConstants.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectStreamField</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
 <tr> <td>java.io.OutputStreamWriter</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.io.PrintStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -95,10 +87,7 @@ differences are currently required.</p>
 <tr> <td>java.net.DatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.DatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.DatagramSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.HttpURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.Inet4Address</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
-<tr> <td>java.net.Inet6Address</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.InetSocketAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.InetSocketAddress.diff">Diff</a></td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.MulticastSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.MulticastSocket.diff">Diff</a></td> </tr>
@@ -111,25 +100,22 @@ differences are currently required.</p>
 <tr> <td>java.net.SocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.SocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketInputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.Socket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
-<tr> <td>java.net.SocketOptions</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.SocketOptions.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketOutputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.SocketPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.SocketPermission.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URLClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.URLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.URL</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.URLStreamHandler</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.Buffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.Buffer.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.BufferOverflowException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.nio.BufferUnderflowException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.ByteBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.ByteBuffer.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.ByteOrder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.ByteOrder.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.ByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ByteChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.Channel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.Channel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.Channels</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.channels.ClosedChannelException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ClosedChannelException.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.DatagramChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.DatagramChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.FileChannel</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.channels.FileLock</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.channels.GatheringByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.GatheringByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.IllegalBlockingModeException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>java.nio.channels.InterruptibleChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.InterruptibleChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.Pipe</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.Pipe.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.ReadableByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ReadableByteChannel.diff">Diff</a></td> </tr>
@@ -151,27 +137,29 @@ differences are currently required.</p>
 <tr> <td>java.nio.charset.CharsetDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.charset.CharsetEncoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.charset.Charset</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.Charset.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.CoderMalfunctionError</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>java.nio.charset.CoderMalfunctionError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.CoderMalfunctionError.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.charset.CoderResult</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.charset.CodingErrorAction</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.CodingErrorAction.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.IllegalCharsetNameException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
-<tr> <td>java.nio.charset.MalformedInputException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
-<tr> <td>java.nio.charset.UnmappableCharacterException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
-<tr> <td>java.nio.charset.UnsupportedCharsetException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>java.nio.charset.IllegalCharsetNameException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.IllegalCharsetNameException.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.charset.MalformedInputException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.MalformedInputException.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.charset.UnmappableCharacterException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.UnmappableCharacterException.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.charset.UnsupportedCharsetException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.UnsupportedCharsetException.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.DoubleBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.FloatBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.IntBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.LongBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.MappedByteBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBuffer.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.ShortBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.rmi.MarshalledObject</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.MarshalledObject.diff">Diff</a></td> </tr>
 <tr> <td>java.rmi.server.RMIClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.RMIClassLoader.diff">Diff</a></td> </tr>
-<tr> <td>java.rmi.server.UnicastRemoteObject</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.UnicastRemoteObject.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.text.CollationKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.text.Collator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td>java.text.Format</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.Format.diff">Diff</a></td> </tr>
 <tr> <td>java.text.RuleBasedCollator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.util.AbstractMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.AbstractMap.diff">Diff</a></td> </tr>
+<tr> <td>java.util.HashMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.HashMap.diff">Diff</a></td> </tr>
+<tr> <td>java.util.jar.Attributes</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.jar.Attributes.diff">Diff</a></td> </tr>
+<tr> <td>java.util.LinkedHashMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.LinkedHashMap.diff">Diff</a></td> </tr>
 <tr> <td>java.util.logging.ConsoleHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.logging.ErrorManager</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.logging.FileHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
