--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -13,7 +13,7 @@
 testing system</a>.</p>
 
 <p>Several people perform regular builds and regression test runs and
-send their test results to the <a href="http://gcc.gnu.org/ml/gcc-testresults">
+send their test results to the <a href="http://gcc.gnu.org/ml/gcc-testresults/">
 gcc-testresults mailing list</a>; see
 <a href="http://gcc.gnu.org/install/test.html"> Installing GCC: Testing</a>
 for information about submitting test results.</p>
