--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -7,27 +7,21 @@
 
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- What is GCJ?
- </th>
-</tr>
-</table>
-<br />
-GCJ is a portable, optimizing, ahead-of-time compiler for the Java
-Programming Language.  It can compile:
+<h2>What is GCJ?</h2>
+
+<p>GCJ is a portable, optimizing, ahead-of-time compiler for the Java
+Programming Language.  It can compile:</p>
 <ul>
 <li>Java source code directly to native machine code,</li>
 <li>Java source code to Java bytecode (class files),</li>
 <li>and Java bytecode to native machine code.</li>
 </ul>
 
-Compiled applications are linked with the GCJ runtime,
+<p>Compiled applications are linked with the GCJ runtime,
 <code>libgcj</code>, which provides the core class libraries, a
 garbage collector, and a bytecode interpreter. <code>libgcj</code> can
 dynamically load and interpret class files, resulting in mixed
-compiled/interpreted applications.
+compiled/interpreted applications.</p>
 
 <p>
 Most of the APIs specified by "The Java Class Libraries" Second
@@ -59,13 +53,7 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <br />
 <br />
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- GCJ News
- </th>
-</tr>
-</table>
+<h2>GCJ News</h2>
 
 <table>
 
